--- a/index.html
+++ b/index.html
@@ -1,16 +1,47 @@
 <!DOCTYPE html>
 <head>
     <title>Sorting Visualizer</title>
-    <h2>Sorting Visualizer</h2>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link href="sorting.css" rel="stylesheet" />
+    <!-- Google Fonts - Ubuntu CHANGE THIS FONT -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap">
 </head>
 <body>
-    <button type="button" class="btn btn-outline-secondary">New Array</button>
-    <button type="button" class="btn btn-outline-primary">Bubble Sort</button>
-    <button type="button" class="btn btn-outline-success">Selection Sort</button>
-    <button type="button" class="btn btn-outline-danger">Insertion Sort</button>
-    <button type="button" class="btn btn-outline-warning">Quick Sort</button>
-    <button type="button" class="btn btn-outline-info">Merge Sort</button>
+    <div class="main-container">
+        <header>
+            <h1 class="title">Sorting Algorithm Visualizer</h1>
+            <nav class="navbar">
+                <div class="nav-left">
+                    <button type="button" class="btn btn-outline-secondary">New Array</button>
+                    <div class="slider-container">
+                        <p class="slider-text">Size of Array</p>
+                        <input class="array_size slider-input" type="range" min=2 max=40 step=1 value=10>
+                    </div>
+                    <div class="slider-container">
+                        <p class="slider-text">Speed</p>
+                        <input class="speed slider-input" type="range" min=100 max=3000 step=100 value=1000>
+                    </div>
+                </div>
+                <div class="nav-right">
+                    <button type="button" class="btn btn-outline-primary">Bubble Sort</button>
+                    <button type="button" class="btn btn-outline-success">Selection Sort</button>
+                    <button type="button" class="btn btn-outline-danger">Insertion Sort</button>
+                    <button type="button" class="btn btn-outline-warning">Quick Sort</button>
+                    <button type="button" class="btn btn-outline-info">Merge Sort</button>
+                </div>
+            </nav>
+            </header>
+        </header>
+    </div>
+
+    <script src="./js_files/common_functions.js"></script>
+    <script src="./js_files/selection.js"></script>
+    <script src="./js_files/bubble.js"></script>
+    <script src="./js_files/insertion.js"></script>
+    <script src="./js_files/merge.js"></script>
+    <script src="./js_files/sorting.js"></script>
 </body>
