--- a/index.html
+++ b/index.html
@@ -1,47 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
+
 <head>
-    <title>Sorting Visualizer</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="sorting.css" rel="stylesheet" />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <title>Sorting Visualizer</title>
+    <!-- Google Fonts - Ubuntu -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap">
+    <!-- External CSS File -->
+    <link rel="stylesheet" href="./sorting.css">
 </head>
+
 <body>
+    <!-- Top Level Container to restrict growing of the width of the body -->
     <div class="main-container">
         <header>
-            <h1 class="title">Sorting Algorithm Visualizer</h1>
+            <h1 class="title"><span class="color-1">Sorting</span> <span class="color-2">Algorithms</span> <span
+                    class="color-3">Visualizer</span></h1>
             <nav class="navbar">
                 <div class="nav-left">
-                    <button type="button" class="btn btn-outline-secondary">New Array</button>
+                    <button type="button" class="btn new-array">new array</button>
                     <div class="slider-container">
-                        <p class="slider-text">Size of Array</p>
+                        <p class="slider-text">array size</p>
                         <input class="array_size slider-input" type="range" min=2 max=40 step=1 value=10>
                     </div>
                     <div class="slider-container">
-                        <p class="slider-text">Speed</p>
+                        <p class="slider-text">speed</p>
                         <input class="speed slider-input" type="range" min=100 max=3000 step=100 value=1000>
                     </div>
                 </div>
                 <div class="nav-right">
-                    <button type="button" class="btn btn-outline-primary">Bubble Sort</button>
-                    <button type="button" class="btn btn-outline-success">Selection Sort</button>
-                    <button type="button" class="btn btn-outline-danger">Insertion Sort</button>
-                    <button type="button" class="btn btn-outline-warning">Quick Sort</button>
-                    <button type="button" class="btn btn-outline-info">Merge Sort</button>
+                    <button type="button" class="btn selection-sort">selection sort</button>
+                    <button type="button" class="btn bubble-sort">bubble sort</button>
+                    <button type="button" class="btn insertion-sort">insertion sort</button>
+                    <button type="button" class="btn merge-sort">merge sort</button>
                 </div>
             </nav>
-            </header>
         </header>
+        <!-- Contains all the dynamically generated div / bar -->
+        <div class="bar-container"></div>
     </div>
-
-    <script src="./js_files/common_functions.js"></script>
-    <script src="./js_files/selection.js"></script>
-    <script src="./js_files/bubble.js"></script>
-    <script src="./js_files/insertion.js"></script>
-    <script src="./js_files/merge.js"></script>
-    <script src="./js_files/sorting.js"></script>
+    <!-- External Javascript Files -->
+    <script src="./js-files/common_functions.js"></script>
+    <script src="./js-files/selection.js"></script>
+    <script src="./js-files/bubble.js"></script>
+    <script src="./js-files/insertion.js"></script>
+    <script src="./js-files/merge.js"></script>
+    <script src="./js-files/sorting.js"></script>
 </body>
+
+</html>
