--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sorting Visualizer</title>
     <!-- Google Fonts - Ubuntu -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <!-- External CSS File -->
     <link rel="stylesheet" href="./sorting.css">
 </head>
@@ -20,21 +21,21 @@
                     class="color-3">Visualizer</span></h1>
             <nav class="navbar">
                 <div class="nav-left">
-                    <button type="button" class="btn new-array">new array</button>
+                    <button type="button" class="btn new-array">New Array</button>
                     <div class="slider-container">
-                        <p class="slider-text">array size</p>
+                        <p class="slider-text">Size of Array</p>
                         <input class="array_size slider-input" type="range" min=2 max=40 step=1 value=10>
                     </div>
                     <div class="slider-container">
-                        <p class="slider-text">speed</p>
+                        <p class="slider-text">Speed</p>
                         <input class="speed slider-input" type="range" min=100 max=3000 step=100 value=1000>
                     </div>
                 </div>
                 <div class="nav-right">
-                    <button type="button" class="btn selection-sort">selection sort</button>
-                    <button type="button" class="btn bubble-sort">bubble sort</button>
-                    <button type="button" class="btn insertion-sort">insertion sort</button>
-                    <button type="button" class="btn merge-sort">merge sort</button>
+                    <button type="button" class="btn bubble-sort">Bubble Sort</button>
+                    <button type="button" class="btn selection-sort">Selection Sort</button>
+                    <button type="button" class="btn insertion-sort">Insertion Sort</button>
+                    <button type="button" class="btn merge-sort">Merge Sort</button>
                 </div>
             </nav>
         </header>
